Bug 409262 - Graphical glitch showing main window
Summary: Graphical glitch showing main window
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.16.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-27 20:46 UTC by dragonborn
Modified: 2020-01-10 02:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dragonborn 2019-06-27 20:46:29 UTC
SUMMARY
edge lines are loaded when opening, but the interior of the application comes to the screen too late.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-06-28 19:45:38 UTC
Confirmed.
Comment 2 Aleix Pol 2020-01-10 02:11:25 UTC
Git commit 2ce5eb9dab5b54d396f10fdde435a98181a7b2be by Aleix Pol.
Committed on 10/01/2020 at 02:11.
Pushed by apol into branch 'master'.

pk: Load the AppStream database on a separate thread

Summary:
No need to block the backends load on PackageKit appstream usage.
Related: bug 409599
FIXED-IN: 5.18.0

Test Plan: Tested manually

Reviewers: #discover_software_store, broulik, #plasma

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26547

M  +138  -82   libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
M  +6    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.h

https://commits.kde.org/discover/2ce5eb9dab5b54d396f10fdde435a98181a7b2be