pk: Load the AppStream database on a separate thread

Summary:
No need to block the backends load on PackageKit appstream usage.

BUG: 409262
BUG: 409599
FIXED-IN: 5.18.0

Test Plan: Tested manually

Reviewers: #discover_software_store, broulik, #plasma

Subscribers: ngraham, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26547